; ModuleID = '/home/carl/AnghaBench/Quake-III-Arena/code/bspc/extr_brushbsp.c_AllocBrush.c'
source_filename = "/home/carl/AnghaBench/Quake-III-Arena/code/bspc/extr_brushbsp.c_AllocBrush.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i32* }

@numthreads = common dso_local global i32 0, align 4
@c_active_brushes = common dso_local global i32 0, align 4
@c_brushmemory = common dso_local global i64 0, align 8
@c_peak_brushmemory = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.TYPE_6__* @AllocBrush(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.TYPE_6__*, align 8
  %4 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %5 = load i32*, i32** null, align 8
  %6 = load i32, i32* %2, align 4
  %7 = sext i32 %6 to i64
  %8 = getelementptr inbounds i32, i32* %5, i64 %7
  %9 = ptrtoint i32* %8 to i32
  store i32 %9, i32* %4, align 4
  %10 = load i32, i32* %4, align 4
  %11 = call %struct.TYPE_6__* @GetMemory(i32 %10)
  store %struct.TYPE_6__* %11, %struct.TYPE_6__** %3, align 8
  %12 = load %struct.TYPE_6__*, %struct.TYPE_6__** %3, align 8
  %13 = load i32, i32* %4, align 4
  %14 = call i32 @memset(%struct.TYPE_6__* %12, i32 0, i32 %13)
  %15 = load i32, i32* @numthreads, align 4
  %16 = icmp eq i32 %15, 1
  br i1 %16, label %17, label %30

17:                                               ; preds = %1
  %18 = load i32, i32* @c_active_brushes, align 4
  %19 = add nsw i32 %18, 1
  store i32 %19, i32* @c_active_brushes, align 4
  %20 = load %struct.TYPE_6__*, %struct.TYPE_6__** %3, align 8
  %21 = call i64 @MemorySize(%struct.TYPE_6__* %20)
  %22 = load i64, i64* @c_brushmemory, align 8
  %23 = add nsw i64 %22, %21
  store i64 %23, i64* @c_brushmemory, align 8
  %24 = load i64, i64* @c_brushmemory, align 8
  %25 = load i64, i64* @c_peak_brushmemory, align 8
  %26 = icmp sgt i64 %24, %25
  br i1 %26, label %27, label %29

27:                                               ; preds = %17
  %28 = load i64, i64* @c_brushmemory, align 8
  store i64 %28, i64* @c_peak_brushmemory, align 8
  br label %29

29:                                               ; preds = %27, %17
  br label %30

30:                                               ; preds = %29, %1
  %31 = load %struct.TYPE_6__*, %struct.TYPE_6__** %3, align 8
  ret %struct.TYPE_6__* %31
}

declare dso_local %struct.TYPE_6__* @GetMemory(i32) #1

declare dso_local i32 @memset(%struct.TYPE_6__*, i32, i32) #1

declare dso_local i64 @MemorySize(%struct.TYPE_6__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
